PONEY ARC EN CIEL SLIP KANGOUROU

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,7 @@
 
 /*
-@media screen and (max-device-width: 360px)
+@media screen and (max-device-width: 480px) {
 
-{
-    #iut{
-        width: 300px;
-        text-align: center;
-    }
 }
 */
 
