--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 */
 
-p {
+* {
     display: block;
 }
 
@@ -20,11 +20,20 @@ p {
 }
 
 header {
-    background-position: center;
-    background-image: url(..\img\logo-iut.jpg);
+    width: 100%;
+    height: 150px;
+    background-image: url(../img/logo-iut.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
 }
 
 form {
     border: 2px solid black;
+    padding: 10px;
+}
+
+form input {
+    display: inline;
+    margin: 5px;
 }
 
