--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@
 */
 
 * {
+    margin-top: 4px;
+    margin-bottom: 4px;
+}
+
+p {
     display: block;
 }
 
@@ -20,20 +25,25 @@
 }
 
 header {
-    width: 100%;
-    height: 150px;
+    width: 100%;    
+    height: 100px;
     background-image: url(../img/logo-iut.jpg);
     background-position: center center;
     background-repeat: no-repeat;
+    background-size: 300px;
 }
 
 form {
     border: 2px solid black;
     padding: 10px;
+    width: 20%;
+}
+
+form h3 {
+    text-align: center;
 }
 
 form input {
-    display: inline;
     margin: 5px;
 }
 
