--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,46 @@
 
-/*
+
 @media screen and (max-device-width: 480px) {
 
+header {
+    width: 100%;    
+    height: 100px;
+    background-image: url(../img/logo-iut.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 300px;
 }
-*/
+
+form {
+    border: 2px solid black;
+    padding: 10px;
+    width: 20%;
+}
+
+form h3 {
+    text-align: center;
+}
+
+form input {
+    margin: 5px;
+}
+
+
+}
+
 
 * {
     margin-top: 4px;
     margin-bottom: 4px;
 }
 
+h1 {
+    text-align: center;
+     font-size: 8vw;
+}
+
 p {
+    font-size: 1em;
     display: block;
 }
 
