PONEY ARC EN CIEL SLIP KANGOUROU

--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,9 @@ form {
     width: 100%;
 }
 
-form h3 {
-    text-align: center;
-}
-
 form input {
-    margin: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 
