--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,26 @@
 
 @media screen and (max-device-width: 480px) {
 
+h1 {
+    text-align: center;
+     font-size: 8vw;
+}
+
+p {
+    font-size: 1em;
+    display: block;
+}
+
+#p1 {
+    background-color: blue;
+}
+#p2 {
+    background-color: white;
+}
+#p3 {
+    background-color: red;
+}
+
 header {
     width: 100%;    
     height: 100px;
@@ -17,10 +37,15 @@ form {
     width: 100%;
 }
 
-form input {
-    margin-left: 5px;
-    margin-right: 5px;
+form h3 {
+    text-align: center;
 }
+
+form input {
+    margin: 5px;
+}
+
+
 
 
 }
