--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,7 @@
     }
 
     form {
-        border: 2px solid black;
-        padding: 10px;
-        width: 100%;
+        width: 360px;
     }
 
     img {
